[project]
name = "ragrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
